k8s/apps/chat/overlays/chat-prod/patch-deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-backend
  namespace: chat-prod
spec:
  selector:
    matchLabels:
      app: chat-backend
  template:
    metadata:
      labels:
        app: chat-backend
    spec:
      containers:
        - name: chat-backend
          resources:
            requests:
              cpu: '250m'
              memory: '512Mi'
              ephemeral-storage: '1Gi'
            limits:
              cpu: '500m'
              memory: '1Gi'
              ephemeral-storage: '2Gi'
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
      terminationGracePeriodSeconds: 30
