k8s/apps/chat/overlays/chat-prod/patch-deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-frontend
  namespace: prod
spec:
  selector:
    matchLabels:
      app: chat-frontend
  template:
    metadata:
      labels:
        app: chat-frontend
    spec:
      containers:
        - name: chat-frontend
          resources:
            requests:
              cpu: '250m'
              memory: '512Mi'
              ephemeral-storage: '1Gi'
            limits:
              cpu: '500m'
              memory: '1Gi'
              ephemeral-storage: '2Gi'
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
      terminationGracePeriodSeconds: 30
