k8s/apps/chat/overlays/chat-prod/patch-istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: chat-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - chat.hugecat.net
      port:
        number: 80
        name: http
        protocol: HTTP
    - hosts:
        - chat.hugecat.net
      port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        credentialName: chat-tls
        mode: SIMPLE
