k8s/apps/chat/overlays/chat-prod/istio-authorizationpolicy-global.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-all-ingress
  namespace: istio-system
spec:
  action: ALLOW
  rules:
    - {}
