k8s/apps/chat/overlays/chat-prod/istio-authorizationpolicy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-chat-frontend
  namespace: chat-prod
spec:
  action: ALLOW
